<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2021 Google Inc. All Rights Reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  

  <!--
    The "fullscreen" and "fullscreen-sticky" TWA manifest values correspond to "immersive" and "sticky-immersive"
    AndroidManifest values.
  -->
  

  <!--
    This variable below expresses the relationship between the app and the site,
    as documented in the TWA documentation at
    https://developers.google.com/web/updates/2017/10/using-twa#set_up_digital_asset_links_in_an_android_app
    and is injected into the AndroidManifest.xml
  -->
  <string name="assetStatements">
    [{
        \"relation\": [\"delegate_permission/common.handle_all_urls\"],
        \"target\": {
            \"namespace\": \"web\",
            \"site\": \"https://yty16.github.io\"
        }
    }]
    
  </string>

  <!-- Shortcut labels -->
  <string name="shortcut_calc">计算器</string>
  <string name="shortcut_calc_full">计算器（含单位换算）</string>
  <string name="shortcut_note">云记事本</string>
  <string name="shortcut_note_full">云记事本</string>
  <string name="shortcut_pomodoro">番茄钟</string>
  <string name="shortcut_pomodoro_full">番茄钟（专注计时）</string>
    <string name="shortcut_games">游戏专区</string>
    <string name="shortcut_games_full">游戏专区（所有游戏）</string>

    <string name="settings_title">应用设置</string>
    <string name="setting_keep_screen_on">屏幕常亮</string>
    <string name="setting_keep_screen_on_desc">保持屏幕不熄屏</string>
    <string name="setting_dark_mode">深色模式</string>
    <string name="setting_dark_mode_desc">强制网页以深色显示</string>
    <string name="setting_external_browser">外链用浏览器打开</string>
    <string name="setting_external_browser_desc">站外链接跳转系统浏览器</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_clear_cache_desc">清理网页资源缓存</string>
    <string name="setting_clear_data">清除浏览数据</string>
    <string name="setting_clear_data_desc">清除 Cookie、表单与历史</string>
    <string name="setting_about">关于</string>
    <string name="setting_version">版本</string>
    <string name="btn_clear">清除</string>
    <string name="toast_cleared">缓存已清除</string>
    <string name="toast_cleared_data">浏览数据已清除</string>
</resources>
